# Numa

./: CMakeLists.txt  README.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Resources/: Numa.icns  icons.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
